[4131a929460833a8115e945eaa571898dc602560]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-cielo.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -774,7 +774,7 @@ Basta acessar nosso <a href="https://developercielo.github.io/Tutorial//Postman"
 
 <p>Abaixo, é demonstrado como o fluxo de compra ocorre na integração via API:</p>
 
-<p><img src="https://developercielo.github.iohttps://developercielo.github.io/images/checkout/int-api.png" alt="Integração Via API" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/int-api.png" alt="Integração Via API" /></p>
 
 <h3 id="criando-o-carrinho">Criando o Carrinho</h3>
 
