[dab5ac0c4ba9aff1fde2f039f900f37ac97ac637]: Updated '_i18n/pt/_posts/webservice/2015-03-25-webservice-1.5.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -163,7 +163,7 @@
 
 <p>O Marketplace também pode ser um participante da divisão, bastando informar seu identificador, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
 
-<h3 id="taxass">Taxass</h3>
+<h3 id="taxas">Taxas</h3>
 
 <p>As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong> e/ou uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do Marketplace e dos seus Subordinados junto à Braspag (Facilitador).</p>
 
