[9cf545b1d35c570e645ce3bf7c55a57372064d24]: Update 2000-01-01-credenciamento.md

--- a/manual/credenciamento.html
+++ b/manual/credenciamento.html
@@ -124,7 +124,7 @@
 
 <h2 id="público-alvo">Público-alvo</h2>
 
-<p><strong><em>API Privada, necessário liberação interna para utilização dela, somente colaboradores Cielo podem utilizar.</em></strong> Qualquer dúvida entre em contato através do e-mail: customer.support@sensedia.com</p>
+<p><strong><em>API Restrita/Privada, necessário liberação interna para utilização, disponível apenas para colaboradores Cielo.</em></strong> Qualquer dúvida entre em contato através do e-mail: customer.support@sensedia.com</p>
 
 <h2 id="o-que-é">O que é</h2>
 
