[860e76435beafbdccc7551a9dbf839e11861c1dc]: correção de detalhes

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -180,13 +180,15 @@ Acesse Documentação da Integração Local</li>
 
 <h3 id="modelos-de-integração-com-a-plataforma-cielo-lio">Modelos de integração com a plataforma Cielo LIO</h3>
 
-<h4 id="integração-remota--cielo-lio-order-manager">Integração Remota | Cielo LIO Order Manager**</h4>
+<h4 id="integração-remota--cielo-lio-order-manager">Integração Remota | Cielo LIO Order Manager</h4>
 
-<p>Conjunto de APIs que permitem que o cliente continue utilizando sua solução de PDV / Automação Comercial com todas as funcionalidades. No momento de realizar o pagamento, ocorre a integração com o gerenciador de pedidos (Order Manager) da Cielo LIO, de forma rápida, simples e segura.</p>
+<p>Conjunto de APIs que permitem que o cliente continue utilizando sua solução de PDV / Automação Comercial com todas as funcionalidades. No momento de realizar o pagamento, ocorre a integração com o gerenciador de pedidos (Order Manager) da Cielo LIO, de forma rápida, simples e segura.
+ <a href="https://developercielo.github.io/manual/cielo-lio#integração-remota">Saiba mais</a></p>
 
 <h4 id="integração-local--cielo-lio-order-manager-sdk">Integração Local | Cielo LIO Order Manager SDK</h4>
 
-<p>A Cielo disponibiliza um SDK com base na Cielo LIO Order Manager API que permite ao desenvolvedor e parceiro Cielo LIO integrar em sua aplicação as funcionalidades da Cielo LIO.</p>
+<p>A Cielo disponibiliza um SDK com base na Cielo LIO Order Manager API que permite ao desenvolvedor e parceiro Cielo LIO integrar em sua aplicação as funcionalidades da Cielo LIO.
+ <a href="https://developercielo.github.io/manual/cielo-lio#integração-local">Saiba mais</a></p>
 
 <h3 id="serviços-periféricos">Serviços periféricos</h3>
 
@@ -348,7 +350,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 
 <p>Caso o desenvolvedor deseje controlar e usar de forma personalizada a orientação de tela da Cielo LIO, este deverá utilizar de acordo com a documentação do Android.</p>
 
-<p>https://developer.android.com/guide/topics/manifest/activity-element.html</p>
+<p><a href="https://developer.android.com/guide/topics/manifest/activity-element.html">Documentação Oficial do Android</a></p>
 
 <p>Acesse o item: android:screenOrientation para obter maiores informações.</p>
 
@@ -433,8 +435,9 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 
 <p>É necessário que você utilize uma IDE (Integrated Development Environment) para desenvolvimento do seu aplicativo. A Cielo recomenda que seja utilizada a IDE do Android Studio (versão 2.2.2 ou superior), visando garantir o funcionamento do aplicativo na plataforma Cielo LIO.</p>
 
-<p>Para mais detalhes sobre a instalação e configuração do Android Studio, <a href="https://developer.android.com/index.html">clique aqui</a>
-Para a criação de um novo projeto no Android Studio, <a href="https://developer.android.com/training/basics/firstapp/creating-project.html">clique aqui</a></p>
+<p>Para mais detalhes sobre a instalação e configuração do Android Studio, <a href="https://developer.android.com/index.html">clique aqui</a></p>
+
+<p>Para a criação de um novo projeto no Android Studio, <a href="https://developer.android.com/training/basics/firstapp/creating-project.html">clique aqui</a></p>
 
 <h2 id="linguagem-de-programação">Linguagem de Programação</h2>
 
@@ -2171,7 +2174,7 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h2 id="sdk">SDK</h2>
+<h2 id="sdks-disponíveis-da-integração-remota">SDKs disponíveis da Integração Remota</h2>
 
 <table>
   <thead>
@@ -2634,19 +2637,19 @@ Iniciar processo de pagamento</p>
 
 <p>Nosso time irá realizar os procedimentos necessários e então, todos os aplicativos publicados pelo desenvolvedor que estejam no status de Desenvolvimento poderão ser baixados em sua Cielo LIO de desenvolvimento.</p>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">CLIQUE AQUI</a> para solicitar a habilitação de sua LIO para LIO de Dev.</p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">Clique Aqui</a> para solicitar a habilitação de sua LIO para LIO de Dev.</p>
 
 <h3 id="loja-privada">Loja Privada</h3>
 
 <p>A loja privada foi um modelo criado para permitir a distribuição dos aplicativos próprios desenvolvidos pelo parceiro. É necessário solicitar a criação da Loja Privada para então ser possível fazer o upload de um aplicativo próprio no Dev Console.</p>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">CLIQUE AQUI</a> para solicitar a criação da Loja Privada.</p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">Clique Aqui</a> para solicitar a criação da Loja Privada.</p>
 
 <p>A partir da Loja Privada criada, o desenvolvedor poderá publicar seu aplicativo no Dev Console selecionando sua loja privada.</p>
 
 <p>A loja privada é essencial para realizar a distribuição de aplicativos próprios lojistas específicos.</p>
 
-<p><a href="https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios">SAIBA MAIS</a></p>
+<p><a href="https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios">Saiba Mais</a></p>
 
 <h3 id="certificação-de-aplicativos">Certificação de Aplicativos</h3>
 
@@ -2725,7 +2728,7 @@ Iniciar processo de pagamento</p>
 
 <p>Caso você desenvolvedor não encontre o erro nesta tabela, abra um ticket para a equipe de suporte reportando o problema encontrado e lembre-se de listar as evidências do erro como prints de tela e mensagens de erro recebidas.</p>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">CLIQUE AQUI</a></p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">Clique Aqui</a></p>
 
 <h2 id="aplicativos-próprios">Aplicativos Próprios</h2>
 
@@ -2754,7 +2757,7 @@ Iniciar processo de pagamento</p>
 
 <p>Aqueles desenvolvedores que optarem por desenvolver aplicativos próprios e distribuir apenas para lojistas específicos devem solicitar via canal do Portal de Desenvolvedores informando quais os números ECs (número com 16 dígitos) e lógicos das LIOs que devem receber o aplicativo.</p>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">CLIQUE AQUI</a> para solicitar a distribuição de seu aplicativo.</p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev">Clique Aqui</a> para solicitar a distribuição de seu aplicativo.</p>
 
 <h3 id="download-de-aplicativo-próprios-na-cielo-lio">Download de Aplicativo Próprios na Cielo LIO</h3>
 
@@ -2766,7 +2769,7 @@ Iniciar processo de pagamento</p>
 
 <p>Os aplicativos públicos são indicados para aqueles desenvolvedores e parceiros que desejam disponibilizar e escalar sua aplicação e permitir o download em todas os equipamentos de Cielo LIO distribuídos nos estabelecimentos comerciais (lojistas) no Brasil via aplicativo da Cielo Store.</p>
 
-<p>Para conhecer mais sobre a Cielo Store, <a href="https://developercielo.github.io/manual/cielo-lio#cielo-store">CLIQUE AQUI</a></p>
+<p>Para conhecer mais sobre a Cielo Store, <a href="https://developercielo.github.io/manual/cielo-lio#cielo-store">Clique Aqui</a></p>
 
 <h3 id="upload-de-novos-aplicativos-públicos-e-novas-versões">Upload de novos Aplicativos Públicos e novas versões</h3>
 
