--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -312,7 +312,7 @@ Veja como realizar essa consulta em nosso manual de integração: https://develo
 
 <ul>
   <li><strong>Moedas</strong>:No momento a API Cielo eCommerce aceita somente transações em Reais (R$/BRL).</li>
-  <li><strong>Cartões internacionais</strong>: Sim, a API aceita cartãoes internacionais, mas as transações são processadas em Reais (R$/BRL).</li>
+  <li><strong>Cartões internacionais</strong>: Sim, a API aceita cartãoes internacionais, mas as transações são processadas em Reais (R$/BRL) e transações parceladas são negadas pelo emissor do cartão.</li>
 </ul>
 
 <p><strong>OBS</strong>: Cartões internacionais não podem realizar parcelamento.</p>
