[7d760bad39c7d69353e28b914191d6132aac4601]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10373,7 +10373,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
       <td>Texto</td>
       <td>255</td>
       <td>—</td>
-      <td>Chave criptografica enviada pelo VisaCheckout. Obrigatoria se TYPE =  “Visa Checkout”</td>
+      <td><code class="highlighter-rouge">CallID</code> enviada pelo VisaCheckout. Obrigatoria se TYPE =  “Visa Checkout”</td>
     </tr>
   </tbody>
 </table>
