--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10552,7 +10552,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Walletkey</code></td>
-      <td>Chave criptografica enviada pelo VisaCheckout</td>
+      <td><code class="highlighter-rouge">CallID</code> enviada pelo VisaCheckout</td>
       <td>Texto</td>
       <td>255</td>
       <td>—</td>
