[d9ca92824e8492ff6e891b8c28da0de35ebbcc64]: Update 2015-03-25-webservice-1.5.md

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -144,7 +144,7 @@
 
 <p>Após a conclusão do credenciamento e recebimento das instruções é preciso desenvolver a integração utilizando como guia este manual. Assim que a integração estiver concluída, é necessário preencher completamente o formulário de homologação e enviá-lo para o Suporte Web do Cielo eCommerce que informará ao estabelecimento a chave de segurança.</p>
 
-<p>Por fim, após o término do desenvolvimento, é preciso dar início à homologação junto à Cielo
+<p>Por fim, após o término do desenvolvimento, é preciso dar início à homologação junto à <strong>Cielo</strong>
 para iniciar a operação no ambiente de produção.</p>
 
 <aside class="notice">Veja a seção Homologação para instruções sobre o processo de homologação</aside>
