[77dc3b7d4256327139248298ea8b1433bc0b4de4]: Updated '_i18n/pt/_posts/edi/2017-11-30-edi.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -163,7 +163,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/edi">Manual EDI</a>
+                    <a href="https://developercielo.github.io/tutorial/edi">Manual de integração</a>
                 </li>
             
             </ul>
