--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/edi">Manual EDI</a>
+                    <a href="https://developercielo.github.io/tutorial/edi">Manual de integração</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
