[f8e7918c7ab39a1b324f622b6d954e44afdaafeb]: informações da bobina LIO V2

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -160,7 +160,12 @@
 
 <p>Enquanto a LIO V1 possui um design mais compacto e permite uma maior mobilidade, a LIO V2 foi concebida em um tamanho maior e possui algumas funcionalidades exclusivas e adicionais como por exemplo:</p>
 
-<p><strong>Impressora térmica</strong>: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.</p>
+<p><strong>Impressora térmica</strong>: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.
+Especificação da Bobina:
+Papel Azul 48 gramas
+Comprimento: 12 metros
+Diâmetro máximo: 30 milímetros
+Largura: 57 milímetros</p>
 
 <p><strong>NFC</strong>: tecnologia presente permitindo o pagamento utilizando cartões com tecnologia contactless.</p>
 
