--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -1033,7 +1033,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -1630,7 +1630,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -2043,7 +2043,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -2717,7 +2717,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Sequence</code></td>
@@ -4738,11 +4738,11 @@ Nesse modelo, o sistema do lojista é encarregado por definir o período, os dad
 
 <p><strong>Estrutura de um RecurrentPaymentID</strong></p>
 
-<p><img src="https://developercielo.github.io/images/RECpaymentID.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/images/apicieloecommerce/recpaymentid.png" alt="" /></p>
 
 <p><strong>Fluxo de uma Recorrência Programada</strong></p>
 
-<p><img src="https://developercielo.github.io/images/FluxosRECPROG.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/images/apicieloecommerce/fluxosrecprog.png" alt="" /></p>
 
 <h4 id="caso-de-uso-1">Caso de uso</h4>
 
@@ -7711,7 +7711,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -9774,7 +9774,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
 </table>
@@ -11238,7 +11238,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SecurityCode</code></td>
